--- a/lecture/02_selector.html
+++ b/lecture/02_selector.html
@@ -146,11 +146,7 @@
     font-size: 30px;
   }
   #test3 input[class$="le"]{
-    font-style: italic;
-  }
-  #test3 input[class]{
-
-  }
+    font-style: italic;  }
 </style>
 <div id ="test3">
   제목: <input type="text" name="title" value="가입인사 드립니다." readonly class="in=title"> <br>
@@ -241,9 +237,7 @@
     #test4 p:nth-of-type(2){
       color: violet;
     }
-    #test4 p:nth-of-type(3){
 
-    }
   </style>
   <div id="test4">
    <p>테스트1</p>
