--- a/lecture/02_selector.html
+++ b/lecture/02_selector.html
@@ -28,7 +28,7 @@
 	  ------------------------------------------------------------------------------------------------------------------
 -->
   <style>
-    *{
+    * {
       /* color: red; */
     }
     div{
@@ -48,11 +48,11 @@
       color: brown
     }
     #li.group3{
-      font-size: 200;
+      font-size: 200px;
 
     }
   </style>
-    <h1 class="grou3">선택자</h1>
+    <h1 class="group3">선택자</h1>
     <div>태그 선택자 택스트1</div>
     <div>태그 선택자 텍스트2</div>
 
