--- a/lecture/02_selector.html
+++ b/lecture/02_selector.html
@@ -28,8 +28,8 @@
 	  ------------------------------------------------------------------------------------------------------------------
 -->
   <style>
-    * {
-      /* color: red; */
+    *{
+      color: red;
     }
     div{
       color: purple;
