--- a/lecture/04_text-style.html
+++ b/lecture/04_text-style.html
@@ -64,11 +64,15 @@
       font-size: 30px;
       font-weight: 900;
       /*정렬*/ 
+      text-shadow: 3px 3px 10px pink;
+      text-shadow: 0px -5px 8px green, 5px 10px 10px yellow;
     }
   </style>
-    <p id="p1">텍스트style test1</style></p>
-    <p id="p2">텍스트style test2</p>
-    <p id="p3">텍스트style test3</p>
-    <a href="https:/www.naver.com" type="_newpage" style="text-decoration: none;">네이버로 이동</a>
+
+  <p id="p1">텍스트style test1</style></p>
+  <p id="p2">텍스트style test2</p>
+  <p id="p3">텍스트style test3</p>
+  <a href="https:/www.naver.com" type="_newpage" style="text-decoration: none;">네이버로 이동</a>
+
 </body>
 </html>
