--- a/lecture/12_flex-style.html
+++ b/lecture/12_flex-style.html
@@ -97,7 +97,29 @@
   <div class="box">box5</div>
   <div class="box">box6</div>
 </div>
+<hr>
 
+<style>
+  .wrap4{
+    width:200px;
+    height:300px;
+    display:flex;
+    flex-flow: column wrap; /* row : 가로방향 wrpa: 사이즈 유지 class 범위 벗어나면 아래로*/
+  }
+
+  .wrap4>.box{
+    width: 80px;
+    height: 80px;
+  }
+</style>
+<div class="wrap4">
+  <div class="box">box1</div>
+  <div class="box">box2</div>
+  <div class="box">box3</div>
+  <div class="box">box4</div>
+  <div class="box">box5</div>
+  <div class="box">box6</div>
+</div>
 <!-- 
   * flex-flow
      → flex-direction 과 flex-wrap 속성을 함께 표기할 수 있는 단축 속성
@@ -114,7 +136,29 @@
   5) justify-content: space-around;  : item들 마다 앞 뒤에 공백 추가
   6) justify-content: space-evenly;  : item들 사이에 균일한 공백 추가
 -->
-
+  <style>
+    .wrap5{
+      width: 300px;
+      height: 100px;
+      display: flex;
+      justify-content: flex-start;
+      justify-content: flex-end;
+      justify-content: center;
+      justify-content: space-between;
+      justify-content: space-around;
+      justify-content: space-evenly;
+    }
+    .wrap5> .box{
+      width: 50px;
+      height: 50px;
+    }
+  </style>
+  <div class="wrap5">
+    <div class="box">box1</div>
+    <div class="box">box2</div>
+    <div class="box">box3</div>
+  </div>
+<hr>
 <!-- 
   * align-items 
      → 교차축(direction이 row일 경우 Y축, column일 경우 X축) 정렬
@@ -125,7 +169,27 @@
   4) align-items: stretch;      : 교차축 방향으로 item 크기가 늘어남
   5) align-items: baseline;     : 베이스라인 기준으로 정렬
 -->
-
+    <style>
+      .wrap6{
+        width: 300px;
+        height: 100px;
+        display: flex;
+        align-items: flex-start;
+        align-items: flex-end;
+        align-items: center;
+        align-items: baseline;
+        gap: 10px;
+      }
+      .wrap6>.box{
+        width: 70px;
+      }
+    </style>
+    <div class="wrap6">
+      <div class="box">box1</div>
+      <div class="box" style="font-size: 30px">box2</div>
+      <div class="box">box3</div>
+    </div>
+    <hr>
 <!-- 
   * flex-basis 
      → item 요소의 기본길이 
@@ -143,7 +207,31 @@
   * flex 
      → flex-grow, flex-shrink, flex-basis를 한번에 지정하는 단축 속성
     flex: grow shrink basis;
--->
+  -->
+    <style>
+      body{margin:0; padding:0}
+      .wrap7{
+        width:100%;
+        height: 100px; 
+        display: flex;
+        flex-wrap: wrap;
+      }
+      /*.wrap7>.box{
+        flex-basis: 250px;
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex: 1 0 250px;
+      }*/
+      .box1{width: 100px}
+      .box3{width: 300px}
+      .box2{flex:1}
+    </style>
+    <div class="wrap7">
+      <div class="box box1">box1</div>
+      <div class="box box2">box2</div>
+      <div class="box box3">box3</div>
+    </div>
 
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 </body>
 </html>
