--- a/lecture/13_flex-layout.html
+++ b/lecture/13_flex-layout.html
@@ -64,7 +64,7 @@
       머리부(Header)
     </div>
     <div class="content">
-     <div class="nav">
+     <div class="av">
       <strong>네비게이션(Nav)</strong>
       <ul>
        <li>home</li>
