--- a/mission/01_선택자 미션.html
+++ b/mission/01_선택자 미션.html
@@ -170,17 +170,19 @@
       padding: 0px;
       width: 1000px;
       height: 1000px;
-      border: 1px solid black;
+      border: 1px solid lightgray;
       border-radius: 2em;
       overflow: hidden;
+      position: relative;
     }
     .card-header{
-      height: 200px;
+      height: 300px;
       background-color: aquamarine;
     }
-    .profile-picture{
-      width: 150px;
-      height: 150px;
+    .profile-card .profile-picture > img{
+
+      width: 50%;
+      height: 30%;
       border-radius: 50%;
     }
   </style>
